--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyNewsfeed</string>
+    <string name="refresh_button">Try again</string>
+    <string name="refresh_label">Something was wrong!</string>
 </resources>
